ibuilder/tests/not_compile/invalid_field_type.stderr
error[E0277]: the trait bound `&'static str: ibuilder::NewBuildableValue` is not satisfied
 --> $DIR/invalid_field_type.rs:3:10
  |
3 | #[derive(IBuilder)]
  |          ^^^^^^^^ the trait `ibuilder::NewBuildableValue` is not implemented for `&'static str`
  |
  = note: required by `ibuilder::NewBuildableValue::new_buildable_value`
