ibuilder/tests/not_compile/invalid_field_type.rs
use ibuilder::*;

#[derive(IBuilder)]
struct Foo {
    field: i64,
    ups: &'static str,
}

fn main() {
    Foo::builder();
}
